# Moonglum

./: .gitignore  CMakeLists.txt  Constants.h  Makefile  MakefileDebug  MakefileRelease  Moonglum  Moonglum-Manual.toc  NBodySims  README.md  Universe.cpp  Universe.h  body.cpp  body.h  gifcommandline.txt  main.cpp  system.cpp  system.h  test.txt
Moonglum-VS2012/: Moonglum-VS2012.sln
Moonglum-VS2015/: Moonglum-VS2015.sln
OutdatedCode/: old_galaxy_main.cpp  old_main_planetary.cpp  plot_Bodies.C  plot_Bodies_combined.C
Utilities/: OpenCLFunctions.h  Utilities.cpp  Utilities.h  XmlReader.cpp  XmlReader.h
baseClasses/: Universe.cpp  Universe.h  body.cpp  body.h  system.cpp  system.h
cosmological-simulation/: EndCoords.txt  NBody.cpp  NBody.out  StartCoords.txt  body.cpp  body.h  plot_Bodies.C  test.cpp  test.eps  test.h
galaxy-simulation/: BlackHole.cpp  BlackHole.h  DarkMatterHalo.cpp  DarkMatterHalo.h  EndCoords.txt  Galaxy.cpp  Galaxy.h  GalaxySim  Gas.h  Makefile  Makefile~  NBody.cpp  NBody.out  Star.h  StartCoords.txt  a.out  body.cpp  body.h  main.cpp  old_main.cpp  plot-galaxy-simulation-all.py  plot-galaxy-simulation.py  plot_Bodies.C  plot_Bodies_combined.C  test.txt
planetary-simulation/: EarthAcc.txt  Earth_trajectory.txt  Jupiter_trajectory.txt  Makefile  ProtoplanetaryCloud.cpp  ProtoplanetaryCloud.cpp~  ProtoplanetaryCloud.h  ProtoplanetaryDisk.cpp  SolarSystem  SolarSystem.cpp  SolarSystem.out  Sun_trajectory.txt  cpgplot.cpp  help.txt  main.cpp  plot-planetary-simulation-3d.py  plot-planetary-simulation-3d.py~  plot-planetary-simulation-all.py  (+3 more)
(+2964 files in other folders)
